<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile_item_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:background="?attr/selectableItemBackground">

    <ImageView
        android:id="@+id/profile_icon"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:src="@drawable/ic_person"
        android:contentDescription="@string/app_name"
        app:tint="@color/black" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginStart="12dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/profile_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/profile_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/value"
            android:textSize="14sp"
            android:textColor="@color/grey"
            android:visibility="visible" />

        <EditText
            android:id="@+id/profile_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:textSize="14sp"
            android:textColor="@color/black"
            android:backgroundTint="@color/grey"
            android:visibility="gone"
            android:inputType="text"
            tools:ignore="LabelFor" />
    </LinearLayout>

    <ImageView
        android:id="@+id/edit_button"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/edit"
        android:src="@drawable/ic_edit"
        app:tint="@color/black" />
</LinearLayout>