<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.ProfileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Top section with background and profile -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="0dp"
                    android:layout_height="250dp"
                    android:contentDescription="@string/profile_background"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/top_profile_background" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/avatar_card"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="150dp"
                    android:layout_marginBottom="8dp"
                    app:cardCornerRadius="75dp"
                    app:cardElevation="4dp"
                    app:cardPreventCornerOverlap="false"
                    app:cardUseCompatPadding="false"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <ImageView
                        android:id="@+id/avatar_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:contentDescription="@string/user_avatar"
                        android:padding="4dp"
                        app:srcCompat="@drawable/profile_avatar" />

                </androidx.cardview.widget.CardView>

                <!-- Edit Avatar Button -->
                <FrameLayout
                    android:id="@+id/edit_avatar_btn_container"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:clickable="true"
                    android:focusable="true"
                    app:layout_constraintBottom_toBottomOf="@+id/avatar_card"
                    app:layout_constraintEnd_toEndOf="@+id/avatar_card">

                    <ImageView
                        android:id="@+id/edit_avatar_btn"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/edit_avatar"
                        android:src="@drawable/ic_edit" />
                </FrameLayout>

                <TextView
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_name"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="#333"
                    app:layout_constraintTop_toBottomOf="@id/avatar_card"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email_example_gmail_com"
                    android:textSize="16sp"
                    android:textColor="#666"
                    app:layout_constraintTop_toBottomOf="@id/username"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="4dp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- User Info Cards -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="16dp"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:contentDescription="@string/home_ic"
                        android:src="@drawable/ic_home" />

                    <TextView
                        android:id="@+id/address"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_weight="1"
                        android:text="@string/_123_street_abc_city"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="#333" />

                    <EditText
                        android:id="@+id/address_edit"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_weight="1"
                        android:autofillHints=""
                        android:inputType="text"
                        android:visibility="gone"
                        android:text="@string/_123_street_abc_city_edit"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="#333"
                        tools:ignore="LabelFor" />

                    <FrameLayout
                        android:id="@+id/edit_address_btn_container"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:clickable="true"
                        android:focusable="true">

                        <ImageView
                            android:id="@+id/edit_address_btn"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_gravity="center"
                            android:contentDescription="@string/edit_address"
                            app:srcCompat="@drawable/ic_edit" />
                    </FrameLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/card_view"
                    android:orientation="horizontal"
                    android:padding="16dp"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:contentDescription="@string/calendar_view"
                        android:src="@drawable/ic_calendar" />

                    <TextView
                        android:id="@+id/birthday"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_weight="1"
                        android:text="@string/birthday_text"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="#333" />

                    <EditText
                        android:id="@+id/birthday_edit"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_weight="1"
                        android:autofillHints=""
                        android:inputType="date"
                        android:visibility="gone"
                        android:text="@string/birthday_edit"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="#333"
                        tools:ignore="LabelFor" />

                    <FrameLayout
                        android:id="@+id/edit_birthday_btn_container"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:clickable="true"
                        android:focusable="true">

                        <ImageView
                            android:id="@+id/edit_birthday_btn"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_gravity="center"
                            android:contentDescription="@string/birthday_edit"
                            app:srcCompat="@drawable/ic_edit" />
                    </FrameLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="16dp"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:contentDescription="@string/person_ic"
                        app:srcCompat="@drawable/ic_person"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/gender"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_weight="1"
                        android:text="@string/male_text"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="#333" />

                    <EditText
                        android:id="@+id/gender_edit"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_weight="1"
                        android:autofillHints=""
                        android:inputType="text"
                        android:visibility="gone"
                        android:text="@string/male_text"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="#333"
                        tools:ignore="LabelFor" />

                    <FrameLayout
                        android:id="@+id/edit_gender_btn_container"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:clickable="true"
                        android:focusable="true">

                        <ImageView
                            android:id="@+id/edit_gender_btn"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_gravity="center"
                            android:contentDescription="@string/edit_gender"
                            app:srcCompat="@drawable/ic_edit" />
                    </FrameLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="16dp"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:contentDescription="@string/ic_password"
                        app:srcCompat="@drawable/ic_password" />

                    <TextView
                        android:id="@+id/password"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_weight="1"
                        android:text="@string/password_visibility"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="#333" />

                    <EditText
                        android:id="@+id/password_edit"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_weight="1"
                        android:autofillHints=""
                        android:inputType="textPassword"
                        android:visibility="gone"
                        android:text="@string/password_visibility"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="#333"
                        tools:ignore="LabelFor" />

                    <FrameLayout
                        android:id="@+id/view_hide_btn_container"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:clickable="true"
                        android:focusable="true">

                        <ImageView
                            android:id="@+id/view_hide_btn"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_gravity="center"
                            android:contentDescription="@string/toggle_password_visibility"
                            app:srcCompat="@drawable/ic_hide"
                            app:tint="@color/black" />
                    </FrameLayout>

                    <FrameLayout
                        android:id="@+id/edit_password_btn_container"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:clickable="true"
                        android:focusable="true">

                        <ImageView
                            android:id="@+id/edit_password_btn"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_gravity="center"
                            android:contentDescription="@string/edit_password_btn_desc"
                            app:srcCompat="@drawable/ic_edit" />
                    </FrameLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

    <include layout="@layout/navigation_bar" />
</androidx.constraintlayout.widget.ConstraintLayout>
